# Lacia

./: CMakeLists.txt  LICENSE  MacDebug.sh  MacRelease.sh  README.md
Documentation/Core/: Safety.md  Size.md  Trait.md
Documentation/Meta/: Destructible.md  Function.md  Reference.md  Remove Extents.md  Trivially Destructible.md  Unbounded Array.md  Unevaluated.md  Void.md
Source/: Lacia.cpp
Source/Core/: Safety.hpp  Size.hpp  Trait.hpp
Source/Meta/: Destructible.hpp  Function.hpp  Reference.hpp  Remove Extents.hpp  Trivially Destructible.hpp  Unbounded Array.hpp  Unevaluated.hpp  Void.hpp
